Updated styles and resume

--- a/index.html
+++ b/index.html
@@ -36,138 +36,142 @@ morphing into a sandbox design experiment for my HTML/CSS
 
           <div class="text-box">
 
-            <h2>Web Development</h2>
+					<div class="separator"></div>
 
-            <div class="project-dropdown">
-              <div class="project-title">
-                <a class="project-link" href="#">Pocket Mom</a>
-								<a href="http://www.pocketmom.io">
-									<img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
-              </div>
-              <div class="project-container">
-                <p class="project-description">
-									I built the landing page for Pocket Mom, an upcoming productivity application.
-								</p>
-              </div>
+          <h2>Experience</h2>
+
+          <div class="project-dropdown">
+            <div class="project-title">
+              <a class="project-link" href="#">Pocket Mom</a>
+							<a href="http://www.pocketmom.io">
+								<img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
             </div>
-
-						<div class="project-dropdown">
-							<div class="project-title">
-								<a href="#" class="project-link">Wikipedia Viewer</a><a href="http://codepen.io/marotafuka/pen/jVKjJw/"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
-							</div>
-							<div class="project-container">
-								<p class="project-description">
-								<p data-height="550" data-theme-id="0" data-slug-hash="jVKjJw" data-default-tab="result" data-user="marotafuka" data-embed-version="2" data-pen-title="Wikipedia Viewer" class="codepen">See the Pen <a href="http://codepen.io/marotafuka/pen/jVKjJw/">Wikipedia Viewer</a> by Mat Fukano (<a href="http://codepen.io/marotafuka">@marotafuka</a>) on <a href="http://codepen.io">CodePen</a>.</p>
-<script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
-								</p>
-								<p class="project-description">
-									A responsive Wikipedia viewer; uses API integration from MediaWiki and utilizes mobile Wikipedia links where appropriate. A good study
-									in API calls and DRY code.
-								</p>
-							</div>
-						</div>
-
-						<div class="project-dropdown">
-              <div class="project-title">
-                <a class="project-link" href="#">Miyazaki Tribute</a><a href="http://github.com/mfukano/just-the-tip"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
-              </div>
-              <div class="project-container">
-                <p class="project-description">
-                <p data-height="400" data-theme-id="light" data-slug-hash="EKrMMB" data-default-tab="result" data-user="marotafuka" data-embed-version="2" data-preview="true" class="codepen">See the Pen <a href="http://codepen.io/marotafuka/pen/EKrMMB/">Miyazaki Tribute</a> by Mat Fukano (<a href="http://codepen.io/marotafuka">@marotafuka</a>) on <a href="http://codepen.io">CodePen</a>.</p>
-                <script async src="http://assets.codepen.io/assets/embed/ei.js"></script>
-                </p>
-                <p class="project-description">
-									A simple tribute page inspired by Free Code Camp.
-									I think this is a great resource and worth walking through for anyone that's trying to break into modern programming,
-									or transition into web development.
-								</p>
-              </div>
-            </div>
-
-            <div class="project-dropdown">
-              <a class="project-link">matfukano.com</a>
-              <div class="project-container">
-                <p class="project-description">
-									This one is pretty self explanatory.
-									My personal site lets me experiment with different ways to do things,
-									and a lot of what I've learned here (clickable contexts for jQuery,
-									box-model details, active classes, and hand-coding Bootstrap-like functionality)
-									is applicable to future works.
-								</p>
-              </div>
-            </div>
-
-            <div class="separator"></div>
-
-            <h2>Open Source</h2>
-
-            <div class="project-dropdown">
-              <div class="project-title">
-                <a class="project-link" href="#">Noding Bat</a>
-								<a href="nodingbat.com:3000">
-									<img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
-              </div>
-              <div class="project-container">
-								<p class="project-description">
-	                <div class="carousel" class="shadow">
-	                  <img class='opaque' src="assets/images/noding-bat-1.png" />
-	                  <img src="assets/images/noding-bat-2.png" />
-	                </div>
-	                <p class="carousel_controls">
-	                  <span class="selected">1</span>
-	                  <span>2</span>
-	                </p>
-	                <p>
-										Noding Bat is an open source extension of Coding Bat.
-										It aims to provide beginner programmers with basic JavaScript mechanics.
-									</p>
-								</p>
-              </div>
-            </div>
-
-            <div class="separator"></div>
-
-            <h2>School Projects</h2>
-
-						<div class="project-dropdown">
-              <div class="project-title">
-                <a class="project-link" href="#">Not Zombies</a><a href="https://github.com/mfukano/Not-Zombies"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
-              </div>
-              <div class="project-container">
-                <p class="project-description">Not Zombies is a survival exploration game prototype by my team of 5. It was written in Unity and C# and features pixel drawn maps and custom AI.</p>
-              </div>
-            </div>
-
-            <div class="project-dropdown">
-              <div class="project-title">
-                <a class="project-link" href="#">Just the Tip</a><a href="http://github.com/mfukano/just-the-tip"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
-              </div>
-              <div class="project-container">
+            <div class="project-container">
               <p class="project-description">
+								I built the landing page for Pocket Mom, an upcoming productivity application.
+							</p>
+            </div>
+          </div>
+
+					<h2>Personal</h2>
+
+					<div class="project-dropdown">
+						<div class="project-title">
+							<a href="#" class="project-link">Wikipedia Viewer</a><a href="http://codepen.io/marotafuka/pen/jVKjJw/"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
+						</div>
+						<div class="project-container">
+							<p class="project-description">
+							<p data-height="550" data-theme-id="0" data-slug-hash="jVKjJw" data-default-tab="result" data-user="marotafuka" data-embed-version="2" data-pen-title="Wikipedia Viewer" class="codepen">See the Pen <a href="http://codepen.io/marotafuka/pen/jVKjJw/">Wikipedia Viewer</a> by Mat Fukano (<a href="http://codepen.io/marotafuka">@marotafuka</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+								<script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
+							</p>
+							<p class="project-description">
+								A responsive Wikipedia viewer; uses API integration from MediaWiki and utilizes mobile Wikipedia links where appropriate. A good study
+								in API calls and DRY code.
+							</p>
+						</div>
+					</div>
+
+					<div class="project-dropdown">
+            <div class="project-title">
+              <a class="project-link" href="#">Miyazaki Tribute</a><a href="http://github.com/mfukano/just-the-tip"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
+            </div>
+            <div class="project-container">
+              <p class="project-description">
+              <p data-height="400" data-theme-id="light" data-slug-hash="EKrMMB" data-default-tab="result" data-user="marotafuka" data-embed-version="2" data-preview="true" class="codepen">See the Pen <a href="http://codepen.io/marotafuka/pen/EKrMMB/">Miyazaki Tribute</a> by Mat Fukano (<a href="http://codepen.io/marotafuka">@marotafuka</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+              <script async src="http://assets.codepen.io/assets/embed/ei.js"></script>
+              </p>
+              <p class="project-description">
+								A simple tribute page inspired by Free Code Camp.
+								I think this is a great resource and worth walking through for anyone that's trying to break into modern programming,
+								or transition into web development.
+							</p>
+            </div>
+          </div>
+
+          <div class="project-dropdown">
+            <a class="project-link">matfukano.com</a>
+            <div class="project-container">
+              <p class="project-description">
+								This one is pretty self explanatory.
+								My personal site lets me experiment with different ways to do things,
+								and a lot of what I've learned here (clickable contexts for jQuery,
+								box-model details, active classes, and hand-coding Bootstrap-like functionality)
+								is applicable to future works.
+							</p>
+            </div>
+          </div>
+
+          <div class="separator"></div>
+
+          <h2>Open Source</h2>
+
+          <div class="project-dropdown">
+            <div class="project-title">
+              <a class="project-link" href="#">Noding Bat</a>
+							<a href="nodingbat.com:3000">
+								<img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
+            </div>
+            <div class="project-container">
+							<p class="project-description">
                 <div class="carousel" class="shadow">
-                  <img class='opaque' src="assets/images/jtt_1.png" />
-                  <img src="assets/images/jtt_2.png" />
-                  <img src="assets/images/jtt_3.png" />
-                  <img src="assets/images/jtt_4.png" />
+                  <img class='opaque' src="assets/images/noding-bat-1.png" />
+                  <img src="assets/images/noding-bat-2.png" />
                 </div>
                 <p class="carousel_controls">
                   <span class="selected">1</span>
                   <span>2</span>
-                  <span>3</span>
-                  <span>4</span>
                 </p>
-                <p>Just the Tip is a tip payment app for Android. Local shared Venmo payments with QR code scanning.</p>
-                </p>
-              </div>
+                <p>
+									Noding Bat is an open source extension of Coding Bat.
+									It aims to provide beginner programmers with basic JavaScript mechanics.
+								</p>
+							</p>
             </div>
-
-          </div> <!-- close text-box -->
-
-          <!-- Icon Footer -->
-          <div class="attribution">Credit for icons is due to
-            <a href="http://www.flaticon.com/authors/freepik">various</a>
-            <a href="http://www.flaticon.com/authors/simpleicon">sources</a>.
           </div>
+
+          <div class="separator"></div>
+
+          <h2>School Projects</h2>
+
+					<div class="project-dropdown">
+            <div class="project-title">
+              <a class="project-link" href="#">Not Zombies</a><a href="https://github.com/mfukano/Not-Zombies"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
+            </div>
+            <div class="project-container">
+              <p class="project-description">Not Zombies is a survival exploration game prototype by my team of 5. It was written in Unity and C# and features pixel drawn maps and custom AI.</p>
+            </div>
+          </div>
+
+          <div class="project-dropdown">
+            <div class="project-title">
+              <a class="project-link" href="#">Just the Tip</a><a href="http://github.com/mfukano/just-the-tip"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
+            </div>
+            <div class="project-container">
+            <p class="project-description">
+              <div class="carousel" class="shadow">
+                <img class='opaque' src="assets/images/jtt_1.png" />
+                <img src="assets/images/jtt_2.png" />
+                <img src="assets/images/jtt_3.png" />
+                <img src="assets/images/jtt_4.png" />
+              </div>
+              <p class="carousel_controls">
+                <span class="selected">1</span>
+                <span>2</span>
+                <span>3</span>
+                <span>4</span>
+              </p>
+              <p>Just the Tip is a tip payment app for Android. Local shared Venmo payments with QR code scanning.</p>
+              </p>
+            </div>
+          </div>
+
+        </div> <!-- close text-box -->
+
+        <!-- Icon Footer -->
+        <div class="attribution">Credit for icons is due to
+          <a href="http://www.flaticon.com/authors/freepik">various</a>
+          <a href="http://www.flaticon.com/authors/simpleicon">sources</a>.
+        </div>
 
         </div>
       </div> <!-- close project box -->
@@ -201,12 +205,39 @@ morphing into a sandbox design experiment for my HTML/CSS
             <div class="separator"></div>
 
             <h2>Skills</h2>
-						<div class="project-li"><p><b>Languages: </b> JavaScript, Ruby, HTML5, CSS, Java</p></div>
-						<div class="project-li"><p><b>Frameworks: </b>Bootstrap, Rails, Sinatra</p></div>
-						<div class="project-li"><p><b>Tools & Tech: </b>jQuery, AJAX, npm, Atom, git, JSON, XML, GIMP</p></div>
-						<div class="project-li"><p><b>Development: </b> Agile (SCRUM), UML modeling, acceptance TDD</p></div>
+						<div class="project-li">
+							<p><b>Professional:</b> JavaScript, HTML5, CSS/Sass, jQuery</p>
+							<p><b>Academic:</b> Java, Python, C#, XML</p>
+							<p><b>Personal:</b> Bootstrap, Ruby, Rails, Sinatra, Meteor.js</p>
+						</div>
 
             <div class="separator"></div>
+
+						<h2>Experience</h2>
+						<div class="project-li">
+							<div class="project-li">
+								<p><b>Zozi</b> (2017) -- Implementation Engineer</p>
+		            <ul>
+									<li>Implement Zozi Advance booking software on new merchant sites</li>
+									<li>Used HTML, CSS, JavaScript knowledge to provide creative solutions to problems</li>
+									<li>Troubleshoot implementations and styles on many CMSes</li>
+									<li>Built sites for newly-signed merchants on internal CMS tool</li>
+		            </ul>
+							</div>
+						</div>
+
+						<div class="project-li">
+							<div class="project-li">
+								<p><b>Pocket Mom</b> (2016) -- Front-end Developer</p>
+		            <ul>
+			            <li>Developed responsive product landing page</li>
+									<li>Used Javascript to procedurally generate shapes on page</li>
+									<li>Implemented MailChimp form to build up mailing list</li>
+
+		            </ul>
+							</div>
+						</div>
+
 
             <h2>Projects</h2>
             <div class="project-li">
@@ -215,14 +246,6 @@ morphing into a sandbox design experiment for my HTML/CSS
 		            <li>Database of sustainable clothing companies</li>
 		            <li>Emphasizes ease-of-use for accessibility</li>
 		          </ul>
-						</div>
-
-            <div class="project-li">
-							<p><b>Pocket Mom</b> (2016) -- Front-end Developer</p>
-	            <ul>
-		            <li>Landing page for productivity app built with jQuery / HTML / CSS</li>
-		            <li>Responsive page with JavaScript generated graphics</li>
-	            </ul>
 						</div>
 
             <div class="project-li">
@@ -276,7 +299,7 @@ morphing into a sandbox design experiment for my HTML/CSS
 
 						<h3>Music</h3>
             <p>
-            	I'm also a musician. I've been involved with group music-making for years,
+            	My second love in life is music. I've been involved with group music-making for years,
 							and have played piano, clarinet, bass clarinet, alto/tenor/baritone sax,
 							bassoon, contrabassoon, along with guitar and bass guitar in my spare time.
 							I'm nothing if not well-rounded.
@@ -319,7 +342,7 @@ morphing into a sandbox design experiment for my HTML/CSS
           </div>
 
           <div class="text-box">
-            <p>
+            <p class="hire-blurb">
 	            I'm looking for work! I like front-end development and I'm working on
 							mastering crucial technologies for a relevant front-end developer today.
 							If you're looking for a web developer who can learn quickly,
