Fix path to resume.md

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ morphing into a sandbox design experiment for my HTML/CSS
                                                                        alt="download-resume" class="icon"/></a>
             </div>
 
-            <zero-md src="/documents/MF-Resume.md"></zero-md>
+            <zero-md src="http://matfukano.com/assets/documents/MF-Resume.md"></zero-md>
 
             <!--            <div class="text-box">-->
 
