--- a/index.html
+++ b/index.html
@@ -216,6 +216,83 @@ morphing into a sandbox design experiment for my HTML/CSS
             <div class="text-box">
                 <zero-md src="http://matfukano.com/assets/documents/MF-Resume.md"></zero-md>
             </div>
+            <!--            <div class="text-box">-->
+
+<!--                <h2>Objective</h2>-->
+<!--                <p>-->
+<!--                    To use my passion for web development and computer science fundamentals to-->
+<!--                    implement clean and functional website design centered on usability.-->
+<!--                </p>-->
+
+<!--                <div class="separator"></div>-->
+
+<!--                <h2>Skills</h2>-->
+<!--                <div class="project-li">-->
+<!--                    <p><b>Professional:</b> JavaScript, HTML5, CSS/Sass, jQuery</p>-->
+<!--                    <p><b>Academic:</b> Java, Python, C#, XML</p>-->
+<!--                    <p><b>Personal:</b> Bootstrap, Ruby, Rails, Sinatra, Meteor.js</p>-->
+<!--                </div>-->
+
+<!--                <div class="separator"></div>-->
+
+<!--                <h2>Experience</h2>-->
+<!--                <div class="project-li">-->
+<!--                    <div class="project-li">-->
+<!--                        <p><b>Zozi</b> (2017) &#45;&#45; Implementation Engineer</p>-->
+<!--                        <ul>-->
+<!--                            <li>Implement Zozi Advance booking software on new merchant sites</li>-->
+<!--                            <li>Used HTML, CSS, JavaScript knowledge to provide creative solutions to problems</li>-->
+<!--                            <li>Troubleshoot implementations and styles on many CMSes</li>-->
+<!--                            <li>Built sites for newly-signed merchants on internal CMS tool</li>-->
+<!--                        </ul>-->
+<!--                    </div>-->
+<!--                </div>-->
+
+<!--                <div class="project-li">-->
+<!--                    <div class="project-li">-->
+<!--                        <p><b>Pocket Mom</b> (2016) &#45;&#45; Front-end Developer</p>-->
+<!--                        <ul>-->
+<!--                            <li>Developed responsive product landing page</li>-->
+<!--                            <li>Used Javascript to procedurally generate shapes on page</li>-->
+<!--                            <li>Implemented MailChimp form to build up mailing list</li>-->
+
+<!--                        </ul>-->
+<!--                    </div>-->
+<!--                </div>-->
+
+
+<!--                <h2>Projects</h2>-->
+<!--                <div class="project-li">-->
+<!--                    <p><b>Better Threads</b> (ongoing) &#45;&#45; Full-stack Rails developer<br></p>-->
+<!--                    <ul>-->
+<!--                        <li>Database of sustainable clothing companies</li>-->
+<!--                        <li>Emphasizes ease-of-use for accessibility</li>-->
+<!--                    </ul>-->
+<!--                </div>-->
+
+<!--                <div class="project-li">-->
+<!--                    <p><b>Just the Tip</b> (2015) &#45;&#45; Java programmer and UX design</p>-->
+<!--                    <ul>-->
+<!--                        <li>Android app for local tip payment and pay share via QR code</li>-->
+<!--                    </ul>-->
+<!--                </div>-->
+
+<!--                <div class="project-li">-->
+<!--                    <p><b>"Not Zombies"</b> (2015) &#45;&#45; Product owner and C# developer</p>-->
+<!--                    <ul>-->
+<!--                        <li>Top-down survival prototype built in Unity with C# over 10 weeks</li>-->
+<!--                        <li>SCRUM to manage deadlines and focus development</li>-->
+<!--                    </ul>-->
+<!--                </div>-->
+
+<!--                <div class="separator"></div>-->
+
+<!--                <h2>Education</h2>-->
+<!--                <p><em>BSc</em> in Computer Science<br>-->
+<!--                    University of California, Santa Cruz (2011 - 2015)<br>-->
+<!--                    Notable Classes: Software Engineering, Mobile Development, Web Design</em></p>-->
+
+<!--            </div>-->
 
             <!-- Icon Footer -->
             <div class="attribution">Credit for icons is due to
