Remove private info, immutable formats

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ morphing into a sandbox design experiment for my HTML/CSS
         <div class="wrapper">
 
             <div class="icons right">
-                <a href="http://soundcloud.com/mat-fukano"><img src="assets/svg/soundcloud-logo.svg" alt="soundcloud"
+                <a href="http://soundcloud.com/ambi-sonic"><img src="assets/svg/soundcloud-logo.svg" alt="soundcloud"
                                                                 class="icon"/></a>
                 <a href="https://www.instagram.com/marotafuka"><img src="assets/svg/instagram-logo.svg"
                                                                     alt="instagram-camera" class="icon"
@@ -383,9 +383,8 @@ morphing into a sandbox design experiment for my HTML/CSS
                     mastering crucial technologies for a relevant front-end developer today.
                     If you're looking for a web developer who can learn quickly,
                     contribute meaningfully and make differences when it matters,
-                    feel free to shoot me an email. You can also download my
-                    <a href="/assets/documents/MF-Resume.pdf" download>resume.PDF here</a>,
-                    or in the Resume section (with additional formats).
+                    feel free to shoot me an email. You can also download my resume
+                    in the top right section of this site.
                 </p>
             </div>
 
