--- a/index.html
+++ b/index.html
@@ -204,11 +204,11 @@ morphing into a sandbox design experiment for my HTML/CSS
         <div class="wrapper">
 
             <div class="icons left">
-                <a href="assets/documents/MF-Resume.pdf" download><img src="assets/svg/pdf-file.svg"
+                <!-- a href="assets/documents/MF-Resume.pdf" download><img src="assets/svg/pdf-file.svg"
                                                                        alt="download-resume" class="icon"
-                                                                       style="padding-left: 0px; margin-left: -3px;"/></a>
-                <a href="assets/documents/MF-Resume.docx" download><img src="assets/svg/doc-file.svg"
-                                                                        alt="download-resume" class="icon"/></a>
+                                                                       style="padding-left: 0px; margin-left: -3px;"/></a -->
+                <!-- a href="assets/documents/MF-Resume.docx" download><img src="assets/svg/doc-file.svg"
+                                                                        alt="download-resume" class="icon"/></a -->
                 <a href="assets/documents/MF-Resume.txt" download><img src="assets/svg/txt-file.svg"
                                                                        alt="download-resume" class="icon"/></a>
             </div>
