Updating some information about my work availability

--- a/index.html
+++ b/index.html
@@ -376,12 +376,10 @@ morphing into a sandbox design experiment for my HTML/CSS
 
             <div class="text-box">
                 <p class="hire-blurb">
-                    I'm looking for work! I like front-end development and I'm working on
-                    mastering crucial technologies for a relevant front-end developer today.
-                    If you're looking for a web developer who can learn quickly,
-                    contribute meaningfully and make differences when it matters,
-                    feel free to shoot me an email. You can also download my resume
-                    in the top right section of this site.
+                    I'm not currently looking for work -- I just joined onto a project that
+		    I'm very excited about and putting as much time into that as I can.
+  	            That said, if you have any cool projects that you think I'd be helpful on
+		    or you need recommendations for people I trust, feel free to reach out!
                 </p>
             </div>
 
