--- a/index.html
+++ b/index.html
@@ -15,11 +15,26 @@ morphing into a sandbox design experiment for my HTML/CSS
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         (function() {
             emailjs.init('3WZiXBeSlANX9BWzV')
         })
     </script>
+    <script type="text/javascript">
+        window.onload = function() {
+            console.log(`in window.onload function from app.js`)
+            document.getElementById('contact-form').addEventListener('submit', function(event) {
+                event.preventDefault()
+                this.contact_number.value = Math.random() * 100000 | 0;
+                emailjs.sendForm('contact_service', 'contact_form', this)
+                .then(function() {
+                    console.log('SUCCESS!')
+                }, function(error) {
+                    console.log(`FAILED WITH ERROR: ${error}`, error)
+                })
+            })
+        }
+    </script> -->
 </head>
 
 <body class="preload">
