Fuck it, just let contact form be in page <head>

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ morphing into a sandbox design experiment for my HTML/CSS
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <!-- <script type="text/javascript">
+    <script type="text/javascript">
         (function() {
             emailjs.init('3WZiXBeSlANX9BWzV')
         })
@@ -34,7 +34,7 @@ morphing into a sandbox design experiment for my HTML/CSS
                 })
             })
         }
-    </script> -->
+    </script>
 </head>
 
 <body class="preload">
