Remove submit for recaptcha so emailjs can handle it instead

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ morphing into a sandbox design experiment for my HTML/CSS
                                 <form action="?" method="POST">
                                     <div class="g-recaptcha" data-sitekey="6LdzcFYkAAAAALZrgKOjqEGGMhJUdr-ucbNcO4nr"></div>
                                     <br/>
-                                    <input type="submit" value="Submit" style="width: 50%;">
+                                    <!-- <input type="submit" value="Submit" style="width: 50%;"> -->
                                 </form><br><br>
                             </div>
 
