--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ morphing into a sandbox design experiment for my HTML/CSS
                                     <div class="g-recaptcha" data-sitekey="6LdzcFYkAAAAALZrgKOjqEGGMhJUdr-ucbNcO4nr"></div>
                                     <br/>
                                     <!-- <input type="submit" value="Submit" style="width: 50%;"> -->
-                                </form><br><br>
+                                </form>
                             </div>
 
                             <input type="submit" value="Send" style="width: 50%;"/>
