Remove captcha, fuck it. Let's see what happens.

--- a/index.html
+++ b/index.html
@@ -328,14 +328,7 @@ morphing into a sandbox design experiment for my HTML/CSS
                             <label>Message</label><br>
                             <textarea name="message" id="" cols="30" rows="10"></textarea><br>
 
-                            <div class="recaptcha">
-                                <form action="?" method="POST">
-                                    <div class="g-recaptcha" data-sitekey="6LdzcFYkAAAAALZrgKOjqEGGMhJUdr-ucbNcO4nr"></div>
-                                    <br/>
-                                </form>
-                            </div>
-
-                            <input type="submit" value="Send" style="width: 50%;"/>
+                            <input type="submit" value="Send" style="width: 100%;" class="submit-button"/>
                         </form>
                     </div>
             </div>
