Contact form done, send it and let the bots have it

--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@ morphing into a sandbox design experiment for my HTML/CSS
 <head>
     <title>Mat Portfolio Design</title>
     <link rel="stylesheet" href="./stylesheets/stylesheet.css" type="text/css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdn.jsdelivr.net/npm/@webcomponents/webcomponentsjs@2/webcomponents-loader.min.js"></script>
     <script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@1/src/zero-md.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 
 <body class="preload">
@@ -330,7 +329,9 @@ morphing into a sandbox design experiment for my HTML/CSS
 
                             <input type="submit" value="Send" style="width: 100%;" class="submit-button"/>
                         </form>
+                        <div id="error">asdf</div>
                     </div>
+
             </div>
 
             <!-- Icon Footer -->
