--- a/index.html
+++ b/index.html
@@ -317,20 +317,21 @@ morphing into a sandbox design experiment for my HTML/CSS
                     Feel free to get in touch if the above sounds useful and relevant to you.
                 </p>
 
-                    <div class="email-form">
-                        <form id="contact-form">
-                            <input type="hidden" name="contact_number">
-                            <label>Name:</label>
-                            <input type="text" name="user_name"><br>
-                            <label>Email:</label>
-                            <input type="email" name="user_email"><br>
-                            <label>Message</label><br>
-                            <textarea name="message" id="" cols="30" rows="10"></textarea><br>
+                <div class="email-form">
+                    <div id="error">asdf</div>
+                    <div id="message">asdf</div>
+                    <form id="contact-form">
+                        <input type="hidden" name="contact_number">
+                        <label>Name:</label>
+                        <input type="text" name="user_name"><br>
+                        <label>Email:</label>
+                        <input type="email" name="user_email"><br>
+                        <label>Message</label><br>
+                        <textarea name="message" id="" cols="30" rows="10"></textarea><br>
 
-                            <input type="submit" value="Send" style="width: 100%;" class="submit-button"/>
-                        </form>
-                        <div id="error">asdf</div>
-                    </div>
+                        <input type="submit" value="Send" style="width: 100%;" class="submit-button"/>
+                    </form>
+                </div>
 
             </div>
 
