Fix up some markup

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@ morphing into a sandbox design experiment for my HTML/CSS
 
     <!-- Top Left (projects) -->
     <div class="box top left">
-        <h1 class="title top left">projects</h1>
+        <h1 class="title top left">
+            <span>projects</span>
+        </h1>
         <div class="wrapper">
 
             <div class="icons right">
@@ -182,7 +184,7 @@ morphing into a sandbox design experiment for my HTML/CSS
 
     <!-- Top Right (resume) -->
     <div class="box top right">
-        <h1 class="title top right">resume</h1>
+        <h1 class="title top right"><span>resume</span></h1>
         <div class="wrapper">
 
             <div class="icons left">
@@ -211,15 +213,26 @@ morphing into a sandbox design experiment for my HTML/CSS
 
     <!-- Bottom Left (about me) -->
     <div class="box bottom left">
-        <h1 class="title bottom left">about</h1>
+        <h1 class="title bottom left">
+            <div class="title-wrapper">
+                about
+                <span></span>
+            </div>
+        </h1>
         <div class="wrapper">
 
             <div class="icons right">
-                <a href="http://soundcloud.com/ambi-sonic"><img src="assets/svg/soundcloud-logo.svg" alt="soundcloud"
-                                                                class="icon"/></a>
-                <a href="https://www.instagram.com/marotafuka"><img src="assets/svg/instagram-logo.svg"
-                                                                    alt="instagram-camera" class="icon"
-                                                                    style="padding-right: 5px;"/></a>
+                <a href="http://soundcloud.com/ambi-sonic">
+                    <img 
+                        src="assets/svg/soundcloud-logo.svg" 
+                        alt="soundcloud"
+                        class="icon"/>
+                </a>
+                <a href="https://www.instagram.com/marotafuka">
+                    <img src="assets/svg/instagram-logo.svg"
+                        alt="instagram-camera" class="icon"
+                        style="padding-right: 5px;"/>
+                </a>
             </div>
 
             <div class="text-box">
@@ -237,11 +250,10 @@ morphing into a sandbox design experiment for my HTML/CSS
 
                 <h3>Tech</h3>
                 <p>
-                    I love to learn, especially when it comes to new technology. Currently I'm piecing together a few things for myself, out of a want to learn and a need to fulfill that want:
+                    I love to learn, especially when it comes to new technology. Currently I'm focused on:
                     <ul style="margin-top: 10px;">
                         <li>Full-stack testing best practices</li>
                         <li>Re-learning Ruby on Rails</li>
-                        <li>Rust, in general (seems like a really cool language)</li>
                     </ul>
                 </p>
 
@@ -284,18 +296,21 @@ morphing into a sandbox design experiment for my HTML/CSS
             </div>
 
             <!-- Icon Footer -->
-            <div class="attribution">Credit for icons is due <a
-                    href="http://www.flaticon.com/authors/gregor-cresnar">to</a>
+            <div class="attribution left">Credit for icons is due 
+                <a href="http://www.flaticon.com/authors/gregor-cresnar">to</a>
                 <a href="http://www.flaticon.com/authors/freepik">various</a>
                 <a href="http://www.flaticon.com/authors/simpleicon">sources</a>.
             </div>
-
         </div>
     </div> <!-- close hobby box -->
 
     <!-- Bottom Right (contact) -->
     <div class="box bottom right">
-        <h1 class="title bottom right">contact</h1>
+        <h1 class="title bottom right">
+            <span>
+                contact
+            </span>
+        </h1>
 
         <div class="wrapper">
             <div class="icons left">
