Fix up some markup

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ morphing into a sandbox design experiment for my HTML/CSS
             </div>
 
             <!-- Icon Footer -->
-            <div class="attribution left">Credit for icons is due 
+            <div class="attribution">Credit for icons is due 
                 <a href="http://www.flaticon.com/authors/gregor-cresnar">to</a>
                 <a href="http://www.flaticon.com/authors/freepik">various</a>
                 <a href="http://www.flaticon.com/authors/simpleicon">sources</a>.
