Add Climblog to personal site

--- a/index.html
+++ b/index.html
@@ -77,6 +77,22 @@ morphing into a sandbox design experiment for my HTML/CSS
 
                 <h2>Personal</h2>
 
+								<div class="project-dropdown">
+										<div class="project-title">
+												<a class="project-link" href="#">Climblog</a>
+												<a href="https://www.github.com/mfukano/climblog">
+														<img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon"/></a>
+												<div class="project-container">
+														<p class="project-description">
+																Climblog is a personal project I started to learn React Native in an applicable way for me.
+																I'm using this app to experiment with Typescript and also learn how to design navigation
+																using my built-up React skills in a new environment. My goal is to have data stored entirely
+																locally and be able to perform calculations for data visualization based on local data.
+														</p>
+												</div>
+										</div>
+								</div>
+
                 <div class="project-dropdown">
                     <div class="project-title">
                         <a href="#" class="project-link">Wikipedia Viewer</a><a
