REFACTOR: Add project image button classes to image button spans for projects, utility function to allow text highlighting without closing current box

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@ morphing into a sandbox design experiment for my HTML/CSS
                                 <img src="assets/images/sophonaut_4.jpg" />
                             </div>
                             <p class="carousel_controls">
-                                <span class="selected">1</span>
-                                <span>2</span>
-                                <span>3</span>
-                                <span>4</span>
+                                <span class="selected project-image-button">1</span>
+                                <span class="project-image-button">2</span>
+                                <span class="project-image-button">3</span>
+                                <span class="project-image-button">4</span>
                             </p>
                             <p>
                                 I spent nearly all of 2022 working on two versions of an application for Sophonaut. Users take a personality assessment, 
@@ -146,8 +146,8 @@ morphing into a sandbox design experiment for my HTML/CSS
                             <img src="assets/images/noding-bat-2.png"/>
                         </div>
                         <p class="carousel_controls">
-                            <span class="selected">1</span>
-                            <span>2</span>
+                            <span class="selected project-image-button">1</span>
+                            <span class="project-image-button">2</span>
                         </p>
                         <p>
                             Noding Bat is an open source extension of Coding Bat.
@@ -176,10 +176,10 @@ morphing into a sandbox design experiment for my HTML/CSS
                             <img src="assets/images/jtt_4.png"/>
                         </div>
                         <p class="carousel_controls">
-                            <span class="selected">1</span>
-                            <span>2</span>
-                            <span>3</span>
-                            <span>4</span>
+                            <span class="selected project-image-button">1</span>
+                            <span class="project-image-button">2</span>
+                            <span class="project-image-button">3</span>
+                            <span class="project-image-button">4</span>
                         </p>
                         <p>Just the Tip is a tip payment app for Android. Local shared Venmo payments with QR code
                             scanning.</p>
