REFACTOR: Cleanup styles and wording

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ morphing into a sandbox design experiment for my HTML/CSS
 
             <div class="text-box">
 
-                <div class="image-container">
+                <div class="image-container top">
                     <img src="assets/images/mat1.jpg" alt="beard-man" class="profile-image">
                 </div>
                 <h3>Hi there</h3>
@@ -261,7 +261,7 @@ morphing into a sandbox design experiment for my HTML/CSS
                     Since you're on this page at all, and also actively decided to read about the page author, thanks for taking the time to read about me!
                 </p>
                 <p>
-                    My name is Mat and I like to make things and problem solve. Here are a few things in life that are important to me:
+                    My name is Mat and I like to make things and solve problems. Here are a few things in life that are important to me:
                 </p>
 
                 <h3>Tech</h3>
@@ -306,7 +306,7 @@ morphing into a sandbox design experiment for my HTML/CSS
                     You'll often find me spending quality time with my weird mutt, Kurogoma.
                 </p>
                 <br>
-                <div class="image-container">
+                <div class="image-container bottom">
                     <img src="assets/images/mat+kuro.jpg" alt="man-with-dog" class="profile-image">
                 </div>
             </div>
@@ -342,7 +342,7 @@ morphing into a sandbox design experiment for my HTML/CSS
                 <p class="hire-blurb">
                     I'm starting the search for work once again! <br><br>
                     I have a year's experience in a small, rapid-iteration startup space doing mostly front-end work with React, but also configuring Next.js on a serverless AWS stack.<br><br>
-                    I have 4 years of experience in technical solutions / integration engineering roles and have experience working with technical points-of-contact at strategic partner companies.<br><br>
+                    I have 5 years of experience in technical solutions / integration engineering roles and have experience working with technical points-of-contact at strategic partner companies.<br><br>
                     I have some experience in leadership roles and working with international teams on a 24-hour cycle.<br><br>
                     
                     Feel free to get in touch if the above sounds useful and relevant to you.
