Testing HTTPS, update txt resume

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ morphing into a sandbox design experiment for my HTML/CSS
             </div>
 
             <div class="text-box">
-                <zero-md src="http://matfukano.com/assets/documents/MF-Resume.md"></zero-md>
+                <zero-md src="https://matfukano.com/assets/documents/MF-Resume.md"></zero-md>
             </div>
 
             <!-- Icon Footer -->
